--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "framer-motion": "^11.17.0",
+    "gsap": "^3.12.7",
+    "gsap-trial": "^3.12.7",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "split-text-js": "^1.0.3",
     "three": "^0.172.0",
     "zustand": "^5.0.3"
   },
