--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "motion": "^12.0.0-alpha.1",
+    "lucide-react": "^0.474.0",
+    "motion": "^12.0.5",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.3"
   },
   "overrides": {
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
