--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-intersection-observer": "^9.15.1",
     "tailwind-merge": "^2.6.0",
     "tech-stack-icons": "^2.1.0",
     "zustand": "^5.0.3"
