--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
