--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.5",
     "next": "15.0.3",
