--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-intersection-observer": "^9.15.1",
+    "resend": "^4.5.2",
     "tailwind-merge": "^2.6.0",
     "tech-stack-icons": "^2.1.0",
     "zustand": "^5.0.3"
