--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-email/components": "^0.0.42",
     "@react-spring/web": "^9.7.5",
     "@tabler/icons-react": "^3.29.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
@@ -23,6 +25,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.15.1",
     "resend": "^4.5.2",
     "tailwind-merge": "^2.6.0",
